# EcomTest-2

./: .gitignore  README.md  README_steps.md  package-lock.json  pyproject.toml  readme
apps/Tienda/: urls.py  views.py
apps/Tienda/templates/Tienda/: tienda.html
apps/clientes/: models.py  urls.py  views.py
apps/clientes/migrations/: 0001_initial.py  0002_cliente_user_alter_cliente_apellido_and_more.py  0003_alter_cliente_apellido_alter_cliente_email_and_more.py  0004_alter_cliente_apellido_alter_cliente_nombre.py
apps/clientes/templates/clientes/: clientes.html  crud_clientes.html  usuarios.html
apps/core/: admin.py  forms.py  models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_aboutmemodel_titulo.py  0003_alter_aboutmemodel_options_alter_aboutmemodel_image.py
apps/cuentas/: forms.py  models.py  urls.py  views.py
apps/productos/: admin.py  forms.py  models.py  urls.py  views.py
apps/productos/migrations/: 0001_initial.py  0002_alter_productos_nombre_categoria.py  0003_alter_categorias_options_alter_productos_options.py  0004_alter_categorias_nombre_subcategorias_and_more.py  0005_subcategorias_categoria_alter_subcategorias_nombre.py  0006_alter_productos_imagen.py  0007_rename_imagen_productos_image.py  0008_remove_subcategorias_nombre_and_more.py  0009_rename_nombre_categorias_categoria_name.py  0010_alter_productos_stock.py  0011_alter_subcategorias_categoria.py  0012_alter_productos_descripcion_and_more.py
apps/ventas/: models.py  urls.py  views.py
config/: settings.py  urls.py  views.py
templates/: 404.html  index.html
(+16 files in other folders)
